--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -348,20 +348,103 @@ The narrow rubber tube attached to the bulb, facilitates filling of the pipette 
 	\begin{itemize}
 
 \item{	 What are the other types of cell counting chambers ?}
-}
+
 \item{	 What are the other cells that can be counted using Neubauer’s chamber?}
 \item{	 Mention the differences between RBC and WBC pipettes.}
 	\end{itemize}
 	
-\chapter*{\centering Estimatim Of Total RBC Count}
+\chapter*{\centering Estimation Of Total RBC Count}
+
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
+		\section*{Aim}
+
+		 To enumerate the number of  erythrocytes in 1 $mm^3$ of blood.
+		\section*{Apparatus Required}
+		Microscope, Hemocytometer (RBC diluting pipette and counting chamber), RBC diluting fluid (Hayem’s fluid), spirit, cotton and lancet.
+
+		\section*{Hayem's Fluid - composition}
+		\begin{itemize}
+
+\item{		Sodium chloride - 0.5 g	- Maintains isotonicity}
+\item{		Sodium bisulphate - 2.5 g - Prevents aggregation  of RBCs (Rouleaux formation)}
+\item{		Mercuric perchloride - 0.25 g - Acts  as preservative, antifungal and antibacterial}
+\item{		Distilled water - 100 ml - Acts as solvent}
+		\end{itemize}
+
+
+		\section*{Procedure}
+		
+Make  a  sterile  finger  prick  and  discard  the  first drop  of blood. Draw blood upto  0.5  mark  and  Hayem’s  fluid  upto 101  mark  with  the  pipette. Mix  the contents thoroughly. Discard  the  first  few  drops and then charge  the  Neubauer chamber. Allow  the cells to  settle  for  3-4  minutes.Count the RBCs in the 4 medium sized corner squares and  in the central medium sized square of the RBC counting area (total of 16 x 5 = 80 smallest squares) under high power objective.
+
+
+\section*{Calcualtion}
+Number of RBCs in 5 medium sized RBC squares = n\newline\vspace{.4cm}
+Area of 1 medium  sized RBC square =$\frac{1}{5}$ $\times$ $\frac{1}{5}$ = $\frac{1}{25}$ $mm^2$\newline\vspace{.4cm}
+Volume of 1 medium sized RBC square = $\frac{1}{25}$ $\times$ $\frac{1}{10}$ = $\frac{1}{250}$ $mm^3$\newline\vspace{.4cm}
+Volume of 5 medium sized RBC squares = $\frac{1}{250}$ $\times$ 5= $\frac{1}{50}$ $mm^3$\newline\vspace{.4cm}
+Number of cells in  $\frac{1}{50}$ $mm^3$ of diluted blood  = n\newline\vspace{.4cm}
+Number of cells in  1 $mm^3$  of diluted blood = 50 n\newline\vspace{.4cm}
+Dilution factor = 1 : 200\newline\vspace{.4cm}
+Number of cells in 1 $mm^3$ of un diluted blood 	= n $\times$ 50 $\times$ 200  \newline\vspace{.4cm}
+
+\section*{Result}
+RBC  count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
+\section*{Questions}
+\begin{itemize}
+\item {Name the other diluting fluids used for red  cell count.}
+\item{How will you identify the RBC counting squares?}
+\item{What is the normal RBC count in males and females?}
+\item{Why is the RBC count high in males?}
+\item{Mention the physiological and pathological causes for anemia and polycythemia?}
+
+
+\end{itemize}
+
 \chapter*{\centering Estimation Of Total WBC Count}
+
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
 \chapter*{\centering Absolute Eosinophil Count}
+
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
 \chapter*{\centering Diffrential Count}
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
 \chapter*{\centering Hemoglobin Estimation}
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
 \chapter*{\centering Blood Grouping \& Typing}
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
 \chapter*{\centering Estimation Of Erythrocyte Sedimentation Rate}
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
 \chapter*{\centering Packed Cell Volume}
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
 \chapter*{\centering Osmotic Fragility}
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
 \chapter*{\centering Specific Gravity}
 
 \part{Clinical Physiology}
