--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -394,6 +394,7 @@ Number of cells in 1 $mm^3$ of un diluted blood 	= n $\times$ 50 $\times$ 200  \
 RBC  count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
 \section*{Questions}
 \begin{itemize}
+
 \item {Name the other diluting fluids used for red  cell count.}
 \item{How will you identify the RBC counting squares?}
 \item{What is the normal RBC count in males and females?}
@@ -408,6 +409,50 @@ RBC  count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
 		\begin{tabular}{p{5in} p{1in}}
 			\textbf{Exp No:}  & \textbf{Date:}\\
 		\end{tabular}
+	\section *{Aim}
+	To enumerate the number of leucocytes (white blood cells) in 1 $mm^3$ of blood.
+	\section*{Apparatus Required}
+Microscope, Hemocytometer, WBC pipette, Turk’s fluid, Spirit, Cotton, Lancet
+	\section*{Turk's Fluid Composition}
+\begin{tabular}{l c l}
+	
+	1\% Glacial Acetic Acid	&	-&	1.5 ml - Lyses RBCs without affecting WBCs\\
+	Gentian Violet&			-&	1.5 ml - Stains nuclei of WBCs\\
+	Distilled Water&		-&	100 ml - Acts as solvent\\
+
+\end{tabular}
+	\section*{Procedure}
+
+	Make a sterile finger prick and discard the 1st drop of blood. Draw blood upto 0.5 mark and Turk’s fluid upto 11 mark in the WBC pipette. Mix the contents thoroughly. Discard the first few drops and charge the Neubauer chamber. Allow the cells to settle for 3 to 4 minutes. Count the WBCs in the 4 corner large squares (WBC counting area) under high power objective.
+
+	\section*{Calcualtion}
+
+	Number of cells in 4 WBC squares = n\newline\vspace{.2cm}
+	Area of 1 WBC square = 	1$\times$ 1 	= 1 $mm^2$\newline\vspace{.2cm}
+	Volume of 1 WBC square	= 1$\times$ $\frac{1}{10}$ = $\frac{1}{10}$ $mm^3$\newline\vspace{.2cm}
+	Volume of 4 WBC squares =4$\times$ $\frac{1}{10}$ = $\frac{4}{10}$ $mm^3$\newline\vspace{.2cm}
+	Number of cells in $\frac{4}{10}$ $mm^3$ of Diluted blood 	= n \newline\vspace{.2cm}
+	Therefore, Number of cells in 1 $mm^3$ of Diluted blood = 	n $\times$ $\frac{10}{4}$\newline\vspace{.2cm}
+	Dilution Factor = 1 : 20\newline\vspace{.2cm}
+	Therefore, Number of cells in 1 $mm^3$ of Undiluted blood 	= n $\times$ $\frac{10}{4}$ $\times$ 20 =	n $\times$ 50\newline\vspace{.2cm}
+
+
+	\section *{Result}
+
+WBC count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
+
+	\section*{Questions}
+
+
+\begin{itemize}
+
+\item{What is the normal RBC : WBC ratio ?}
+\item{ In which condition is RBC pipette used for counting WBCs ?}
+\item{ Why is blood diluted only 20 times in WBC counting?}
+\item{ Mention the physiological and pathological causes of high and low WBC count.}
+\item{ What is Leucocytosis ?}
+\item{ What is Leukemia?}
+\end{itemize}
 
 \chapter*{\centering Absolute Eosinophil Count}
 
@@ -415,37 +460,106 @@ RBC  count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
 			\textbf{Exp No:}  & \textbf{Date:}\\
 		\end{tabular}
 
+	\section*{Aim}
+	\section*{Apparatus Required}
+	\section*{Turk's Fluid Composition}
+	\section*{Procedure}
+	\section*{Calcualtion}
+	\section*{Result}
+	\section*{Questions}
+
 \chapter*{\centering Diffrential Count}
 		\begin{tabular}{p{5in} p{1in}}
 			\textbf{Exp No:}  & \textbf{Date:}\\
 		\end{tabular}
+
+	\section*{Aim}
+	\section*{Apparatus Required}
+	\section*{Turk's Fluid Composition}
+	\section*{Procedure}
+	\section*{Calcualtion}
+	\section*{Result}
+	\section*{Questions}
 
 \chapter*{\centering Hemoglobin Estimation}
 		\begin{tabular}{p{5in} p{1in}}
 			\textbf{Exp No:}  & \textbf{Date:}\\
 		\end{tabular}
 
+	\section*{Aim}
+	\section*{Apparatus Required}
+	\section*{Turk's Fluid Composition}
+	\section*{Procedure}
+	\section*{Calcualtion}
+	\section*{Result}
+	\section*{Questions}
+
 \chapter*{\centering Blood Grouping \& Typing}
 		\begin{tabular}{p{5in} p{1in}}
 			\textbf{Exp No:}  & \textbf{Date:}\\
 		\end{tabular}
 
+	\section*{Aim}
+	\section*{Apparatus Required}
+	\section*{Turk's Fluid Composition}
+	\section*{Procedure}
+	\section*{Calcualtion}
+	\section*{Result}
+	\section*{Questions}
+
 \chapter*{\centering Estimation Of Erythrocyte Sedimentation Rate}
 		\begin{tabular}{p{5in} p{1in}}
 			\textbf{Exp No:}  & \textbf{Date:}\\
 		\end{tabular}
+	\section*{Aim}
+	\section*{Apparatus Required}
+	\section*{Turk's Fluid Composition}
+	\section*{Procedure}
+	\section*{Calcualtion}
+	\section*{Result}
+	\section*{Questions}
+
 
 \chapter*{\centering Packed Cell Volume}
 		\begin{tabular}{p{5in} p{1in}}
 			\textbf{Exp No:}  & \textbf{Date:}\\
 		\end{tabular}
+	\section*{Aim}
+	\section*{Apparatus Required}
+	\section*{Turk's Fluid Composition}
+	\section*{Procedure}
+	\section*{Calcualtion}
+	\section*{Result}
+	\section*{Questions}
+
 
 \chapter*{\centering Osmotic Fragility}
 		\begin{tabular}{p{5in} p{1in}}
 			\textbf{Exp No:}  & \textbf{Date:}\\
 		\end{tabular}
 
+	\section*{Aim}
+	\section*{Apparatus Required}
+	\section*{Turk's Fluid Composition}
+	\section*{Procedure}
+	\section*{Calcualtion}
+	\section*{Result}
+	\section*{Questions}
+
 \chapter*{\centering Specific Gravity}
+
+		\begin{tabular}{p{5in} p{1in}}
+			\textbf{Exp No:}  & \textbf{Date:}\\
+		\end{tabular}
+
+	\section*{Aim}
+	\section*{Apparatus Required}
+	\section*{Turk's Fluid Composition}
+	\section*{Procedure}
+	\section*{Calcualtion}
+	\section*{Result}
+	\section*{Questions}
+
 
 \part{Clinical Physiology}
 
