Absolute Eosinophil Count

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -461,12 +461,40 @@ WBC count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
 		\end{tabular}
 
 	\section*{Aim}
+
+To determine the number of eosinophils per cu mm of blood
 	\section*{Apparatus Required}
-	\section*{Turk's Fluid Composition}
+Microscope, Hemocytometer, Dunger’s fluid, spirit, cotton and lancet.
+	\section*{Dunger's Fluid Composition}
+1\% of solution of eosin in water (5$ml$)- Eosin stains the eosinophilic granules.\newline
+Acetone (5$ml$) - Acetone lyses the cell membrane of all other cells.\newline
+Distilled water (90$ml$) - Distilled water to make up to 100$ml$.Acts as solvent.\newline
 	\section*{Procedure}
+Make a sterile finger prick and discard the first drop of blood. Draw blood upto 1 and the Dunger’s fluid upto mark 11 in a WBC pipette. Mix the contents thoroughly. Cover the pipette with a petri dish lined by moistened filter paper. Wait for 15 minutes. Discard the first few drops and charge the Neubauer chamber. The eosinophils are identified by the pinkish orange stained coarse granules in the cytoplasm. Count the Eosinophils in all the 9 large squares of the Neubauer chamber. Count within 30 minutes of charging .
 	\section*{Calcualtion}
+	Number of cells counted in 9 large squares				=	n\newline\vspace{.2cm}
+	Area of 1 large square				=	1 $\times$ 1		=	1$mm^2$	\newline\vspace{.2cm}
+	Volume of 1 large square				=	1 $\times$ $\frac{1}{10}$	=	$\frac{1}{10}$ $mm^3$\newline\vspace{.2cm}
+	Volume of 9 large square				=	9 $\times$ $\frac{1}{10}$	=	$\frac{9}{10}$ $mm^3$\newline\vspace{.2cm}
+	Number of cells in $\frac{9}{10}$ $mm^3$ of diluted blood				=	n\newline\vspace{.2cm}
+	Number of cells in 1 $mm^3$ of diluted blood				=	n $\times$ $\frac{10}{9}$\newline\vspace{.2cm}
+	Dilution factor								=	1:10\newline\vspace{.2cm}
+Therefore, number of cells in 1 $mm^3$ of undiluted blood		=	n$\times$$\frac{10}{9}$$\times$10
+										=	n$\times$$\frac{100}{9}$
 	\section*{Result}
+
+Abosolute Eosinophil count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
+
 	\section*{Questions}
+	\begin{itemize}
+
+\item{What is the normal value of Absolute Eosinophil Count ?}
+\item{What is the difference between the Differential Count and the Absolute Eosinophil Count ?}
+\item{What are the other diluting fluids used for Absolute Eosinophil Count?}
+\item{What are the contents of eosinophilic granules ?}
+\item{What are the functions of eosinophils?}
+\item{What are eosinopenia and eosinophilia?}
+	\end{itemize}
 
 \chapter*{\centering Diffrential Count}
 		\begin{tabular}{p{5in} p{1in}}
